--- a/Hardware_Software.css
+++ b/Hardware_Software.css
@@ -244,7 +244,7 @@ a {
 }
 
 .head-Banner-wrapper .head-Banner-container {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(Images/About-Page/page-title.jpg) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(Images/Hardware-Software-Page/banner.jpg) no-repeat center;
   background-size: cover;
   min-height: 400px;
   width: 100%;
@@ -263,7 +263,7 @@ a {
 }
 
 .head-Banner-wrapper .head-Banner-container .overlay-1 {
-  background: url(Images/About-Page/overlay-1.png) no-repeat center;
+  background: url(Images/Hardware-Software-Page/overlay-1.png) no-repeat center;
   background-size: contain;
   position: absolute;
   top: 0;
@@ -275,7 +275,7 @@ a {
 }
 
 .head-Banner-wrapper .head-Banner-container .overlay-2 {
-  background: url(Images/About-Page/overlay-2.png) no-repeat center;
+  background: url(Images/Hardware-Software-Page/overlay-2.png) no-repeat center;
   background-size: contain;
   position: absolute;
   bottom: 0;
@@ -390,6 +390,98 @@ a {
 
   .head-Banner-wrapper .banner-desc {
     font-size: 16px;
+  }
+}
+
+
+/* hardware-software */
+/* =============================================================== */
+.hardware-software-wrapper {
+  width: 100%;
+}
+
+.hardware-software-wrapper .section-1 {
+  margin-bottom: 20px;
+}
+
+.hardware-software-wrapper .img-section img {
+  border-radius: 15px;
+}
+
+.hardware-software-wrapper .content-section .heading-content {
+  padding-bottom: 10px;
+}
+
+.hardware-software-wrapper .content-section .heading-content h3 {
+  font-size: 28px;
+  font-family: var(--font-primary);
+  margin-bottom: 7px;
+  color: var(--primary-color);
+}
+
+.hardware-software-wrapper .content-section .heading-content h6 {
+  font-family: var(--font-primary);
+  margin-bottom: 5px;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.hardware-software-wrapper .content-section .sub-content p {
+  font-family: var(--font-primary);
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.hardware-software-wrapper .content-section .sub-content h6 {
+  font-family: var(--font-primary);
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.hardware-software-wrapper .parent-overlay {
+  position: relative;
+}
+
+.hardware-software-wrapper .child-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: var(--primary-color);
+  filter: blur(200px);
+}
+
+
+/* hardware-software - Media Query */
+/* ============================================================================ */
+@media screen and (max-width: 992px) {}
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 576px) {
+  .hardware-software-wrapper .content-section .heading-content h3 {
+    font-size: 28px;
+  }
+
+  .hardware-software-wrapper .content-section .heading-content h6 {
+    font-size: 18px;
+  }
+
+  .hardware-software-wrapper .content-section .sub-content p {
+    font-size: 16px;
+  }
+
+  .hardware-software-wrapper .content-section .sub-content h6 {
+    font-size: 18px;
+  }
+
+  .hardware-software-wrapper .child-overlay {
+    width: 150px;
+    height: 150px;
+    filter: blur(160px);
   }
 }
 
