--- a/Industry_category_2.css
+++ b/Industry_category_2.css
@@ -394,6 +394,72 @@ a {
 }
 
 
+/* Industry Card */
+/* ============================================================================ */
+.category-wrapper {
+  width: 100%;
+}
+
+.category-wrapper h2 {
+  font-size: 32px;
+  font-weight: 500;
+  color: var(--black-color);
+}
+
+.category-wrapper .section-card {
+  padding: 4px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+  transition: all 0.3s ease-in-out;
+}
+
+.category-wrapper .section-card:hover {
+  transform: translateY(1px);
+}
+
+.category-wrapper .section-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.category-wrapper .section-card .card-body {
+  padding: 12px;
+  padding-bottom: 16px;
+}
+
+.category-wrapper .section-card .card-body .card-title {
+  padding-top: 8px;
+  text-align: center;
+  color: var(--primary-color);
+  font-size: 22px;
+}
+
+.category-wrapper .section-card .card-body p {
+  margin-bottom: 0px;
+}
+
+
+/* Media Query - Industry Card */
+/* ============================================================================ */
+@media screen and (max-width: 992px) {
+  .category-wrapper .section-card .card-body .card-title{
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 576px) {
+  .category-wrapper .section-card .card-body .card-title{
+    font-size: 19px;
+  }
+  .category-wrapper h2 {
+    font-size: 28px;
+  }
+}
+
+
 /* Footer */
 /* =============================================================== */
 .footer-wrapper {
