--- a/home.css
+++ b/home.css
@@ -361,22 +361,22 @@ a {
 
 .page-up {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 50px;
-  height: 50px;
+  bottom: 25px;
+  right: 25px;
+  width: 45px;
+  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
   visibility: hidden;
-  transform: translateY(300px);
+  transform: translateY(50px);
   border-radius: 50%;
   background-color: var(--black-color);
   color: var(--white-color);
   cursor: pointer;
   z-index: 1000;
-  transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
+  transition: opacity 0.6s ease, transform 0.6s ease, visibility 0.6s;
 }
 
 .fa-angle-up {
@@ -408,6 +408,11 @@ a {
 
   .banner-shadow-2 {
     bottom: 0%;
+  }
+
+  .page-up {
+    width: 40px;
+    height: 40px;
   }
 }
 
