--- a/home.css
+++ b/home.css
@@ -17,6 +17,10 @@ a {
   text-decoration: none;
 }
 
+.highlighter {
+  color: var(--primary-color);
+}
+
 * {
   margin: 0%;
   padding: 0%;
@@ -657,6 +661,27 @@ a {
   text-align: center;
 }
 
+.industry-wrapper .add-content{
+  padding: 0 16px;
+}
+.industry-wrapper .add-content .title{
+  color: var(--black-color);
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 16px;
+  text-align: center;
+}
+.industry-wrapper .add-content .text-container{
+  margin-bottom: 16px;
+}
+.industry-wrapper .add-content .text-container .text{
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 2;
+  text-align: center;
+}
+
 .industry-wrapper .banner-shadow-1 {
   position: absolute;
   top: 55%;
@@ -684,6 +709,9 @@ a {
   .industry-wrapper .section-heading {
     font-size: 40px;
   }
+  .industry-wrapper .add-content{
+    padding: 0px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -693,6 +721,13 @@ a {
 
   .industry-wrapper .industry-container .row .card {
     margin-bottom: 15px;
+  }
+
+  .industry-wrapper .add-content .text-container .text{
+    line-height: 1.8;
+  }
+  .industry-wrapper .add-content .title{
+    font-size: 28px;
   }
 }
 
@@ -707,6 +742,23 @@ a {
 
   .industry-wrapper .industry-container .row .card .card-body {
     padding-bottom: 16px;
+  }
+
+  .industry-wrapper .section-container{
+    padding: 0px 5px;
+  }
+
+  .industry-wrapper .industry-container{
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .industry-wrapper .add-content .text-container .text{
+    font-size: 16px;
+  }
+
+  .industry-wrapper .add-content .title{
+    font-size: 24px;
   }
 
   .industry-wrapper .banner-shadow-1 {
