--- a/home.css
+++ b/home.css
@@ -675,7 +675,7 @@ a {
   margin-bottom: 16px;
 }
 .industry-wrapper .add-content .text-container .text{
-  color: var(--sub-gray);
+  color: var(--black-color);
   font-size: 18px;
   font-weight: 400;
   line-height: 2;
