--- a/Industry_category_1.css
+++ b/Industry_category_1.css
@@ -11,6 +11,38 @@
   --black-color: #1f2937;
   --sub-gray: #4b5563;
   --white-color: #ffffff;
+  --gradient-color: #ff4b5c
+}
+
+/* Scrollbar Width */
+::-webkit-scrollbar {
+  width: 15px; 
+}
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, var(--black-color) 40%, #2d3748 100%);
+  border-radius: 10px;
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(135deg, var(--primary-color), var(--gradient-color));
+  border-radius: 12px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
+}
+
+/* Scrollbar Thumb Hover Effect */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(135deg, var(--gradient-color), var(--primary-color));
+  box-shadow: 0 0 8px rgba(229, 35, 51, 0.8);
+  transform: scale(1.1);
+}
+
+/* Scrollbar Corner */
+::-webkit-scrollbar-corner {
+  background-color: var(--black-color);
 }
 
 a {
